<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:icon="@drawable/sett"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_item3"
        android:orderInCategory="100"
        android:title="@string/action_menu_stable"
        app:showAsAction="collapseActionView" />
    <group android:id="@+id/action_group1">
        <item
            android:id="@+id/action_item1"
            android:orderInCategory="100"
            android:title="@string/action_item1"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/action_item2"
            android:orderInCategory="100"
            android:title="@string/action_item2"
            app:showAsAction="collapseActionView" />
    </group>
</menu>